<resources>
    <string name="app_name">Ciudad de Artistas</string>

    <string name="hint_search">Busqueda por nombre</string>
    <string name="nombre_transicion_imagen">imagen_compartida</string>

    <string name="categorias">CATEGORIAS</string>
    <string name="todas">TODAS LOS PROYECTOS</string>

    <string name="DescripcionImagen">Tipos de proyectos</string>

    <string name="btn_registro">Registrarse</string>
    <string name="btn_acceder">Iniciar sesión</string>
    <string name="no_account">No tienes cuenta?</string>
    <string name="email">E-mail</string>
    <string name="pass">Contraseña</string>
    <string name="acceder">ó accede con</string>

    <string name="prefs_file">com.citelligence.ciudaddeartistas.PREFERENCE_FILE_KEY</string>
    <string name="facebook_app_id">851209288735278</string>
    <string name="fb_login_protocol_scheme">fb851209288735278</string>

    <string name="nombreProyecto">Nombre Proyecto</string>
    <string name="tel">Teléfono</string>
    <string name="redes">Redes Sociales</string>
    <string name="logo">Logo de proyecto</string>

    <string name="Pedidos">Pedidos</string>
    <string name="Domicilios">Domicilios</string>
    <string name="Agregar">Agregar Proyecto</string>
    <string name="logout">Cerrar sesión</string>
    <string name="categoria">Categoría</string>

    <string name="Detalledeproyecto">Detalles de Proyecto</string>
    <string name="nombreLocal">Nombre</string>
    <string name="descripcionContenido">Descripción</string>
    <string name="ubicacion">Ubicación</string>
    <string name="direccion">Dirección</string>
    <string name="descripcionUbicacion">Descripción de ubicación</string>
    <string name="servicios">Productos y/o Servicios</string>
    <string name="descripcionProductos">Productos o servicios ofrecidos</string>
    <string name="contacto">Contacto</string>
    <string name="Nombre_contacto">Nombre de contacto</string>
    <string name="celular">Celular</string>
    <string name="web">Pagina Web</string>
    <string name="descripcion">Descripción</string>

    <string name="footer">Footer</string>

    <string name="des_cate">Imagen de categoria</string>
    <string name="des_logo">Logo de proyecto</string>

</resources>