<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".MainActivity">

    <View
        android:id="@+id/tool"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/banner" />

    <!--<androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbare"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/app_name"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/blue_app"/>-->

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"

        android:background="@drawable/tab_layout"
        app:layout_constraintTop_toBottomOf="@id/tool"
        app:tabGravity="center"
        app:tabIndicatorColor="@color/white"
        app:tabIndicatorHeight="5dp"
        app:tabSelectedTextColor="@color/white"
        app:tabTextAppearance="@style/MyTabLayoutTextAppearance"
        app:tabTextColor="@color/bluelight_app"
        tools:layout_editor_absoluteX="0dp">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/categorias" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/todas" />

    </com.google.android.material.tabs.TabLayout>


    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toTopOf="@+id/footer"
        app:layout_constraintTop_toBottomOf="@id/tab_layout"
        app:layout_constraintVertical_bias="1"
        android:background="@drawable/backgr"/>

    <ImageView
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:scaleType="centerInside"
        android:src="@drawable/footer"
        android:contentDescription="@string/footer" />

</androidx.constraintlayout.widget.ConstraintLayout>