<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue_app">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/whitesmoke"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/Detalledeproyecto"
                android:textColor="@color/white"
                android:textStyle="bold|italic"
                android:textSize="18dp"
                android:background="@drawable/detalles_title"
                android:gravity="center_vertical|center"
                android:fontFamily="@font/we_lato_bold"/>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                app:cardBackgroundColor="@color/snow"
                android:layout_margin="@dimen/card_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/icon_categoria"
                            android:layout_width="200dp"
                            android:layout_height="100dp"
                            android:layout_weight="3"
                            android:scaleType="fitCenter"
                            android:src="@drawable/ic_artesanias_blue"
                            android:layout_marginStart="20dp"
                            android:layout_gravity="center_horizontal|center_vertical"/>

                        <TextView
                            android:textSize="30sp"
                            android:id="@+id/nombredetail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:layout_gravity="center_vertical|center_horizontal"
                            android:textStyle="bold"
                            android:text="Nombre"
                            android:textAlignment="center"
                            android:padding="5dp"
                            android:textColor="@color/blue_app"
                            android:fontFamily="@font/lato_bold"
                            android:textFontWeight="900"/>

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                app:cardBackgroundColor="@color/snow"
                android:layout_margin="@dimen/card_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/text_padding"
                        android:text="@string/descripcionContenido"
                        android:fontFamily="@font/lato_regular"/>

                    <TextView
                        android:textSize="18sp"
                        android:id="@+id/descrip"
                        android:justificationMode="inter_word"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/text_padding"
                        android:textColor="@color/detail"
                        android:fontFamily="@font/lato_regular"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="5dp"
                android:text="@string/ubicacion"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/blue_app"
                android:textStyle="bold|italic"
                android:gravity="center_horizontal"
                android:fontFamily="@font/lato_regular"/>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                app:cardBackgroundColor="@color/snow"
                android:layout_margin="@dimen/card_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/text_padding"
                        android:text="@string/direccion"
                        android:fontFamily="@font/lato_regular"/>

                    <TextView
                        android:textSize="18sp"
                        android:id="@+id/addressdetail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/text_padding"
                        android:focusable="true"
                        android:autoLink="map"
                        android:clickable="true"
                        android:textIsSelectable="true"
                        android:linksClickable="true"
                        android:textColorLink="@color/blue_app"
                        android:textColor="@color/blue_app"
                        android:fontFamily="@font/lato_regular"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="5dp"
                android:text="@string/servicios"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/blue_app"
                android:textStyle="bold|italic"
                android:gravity="center_horizontal"
                android:fontFamily="@font/lato_regular"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                app:cardBackgroundColor="@color/snow"
                android:layout_margin="@dimen/card_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:textSize="18sp"
                        android:id="@+id/prodetail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/text_padding"
                        android:textColor="@color/detail"
                        android:fontFamily="@font/lato_regular"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="5dp"
                android:text="@string/contacto"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/blue_app"
                android:textStyle="bold|italic"
                android:gravity="center_horizontal"
                android:fontFamily="@font/lato_regular"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                app:cardBackgroundColor="@color/snow"
                android:layout_margin="@dimen/card_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/text_padding"
                        android:text="@string/Nombre_contacto"
                        android:fontFamily="@font/lato_regular"/>

                    <TextView
                        android:textSize="18sp"
                        android:id="@+id/contactodetail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/text_padding"
                        android:textColor="@color/detail"
                        android:fontFamily="@font/lato_regular"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                app:cardBackgroundColor="@color/snow"
                android:layout_margin="@dimen/card_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/text_padding"
                        android:text="@string/tel"
                        android:fontFamily="@font/lato_regular"/>

                    <TextView
                        android:id="@+id/telefonodetail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textIsSelectable="true"
                        android:linksClickable="true"
                        android:textColorLink="@color/blue_app"
                        android:autoLink="all"
                        android:textColor="@color/blue_app"
                        android:shadowRadius="2"
                        android:padding="@dimen/text_padding"
                        android:textSize="18sp"
                        android:fontFamily="@font/lato_regular"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                app:cardBackgroundColor="@color/snow"
                android:layout_margin="@dimen/card_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/text_padding"
                        android:text="@string/celular"
                        android:fontFamily="@font/lato_regular"/>

                    <TextView
                        android:id="@+id/celdetail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textIsSelectable="true"
                        android:linksClickable="true"
                        android:textColorLink="@color/blue_app"
                        android:autoLink="all"
                        android:textColor="@color/blue_app"
                        android:shadowRadius="2"
                        android:padding="@dimen/text_padding"
                        android:textSize="18sp"
                        android:fontFamily="@font/lato_regular"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                app:cardBackgroundColor="@color/snow"
                android:layout_margin="@dimen/card_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/text_padding"
                        android:text="@string/email"
                        android:fontFamily="@font/lato_regular"/>

                    <TextView
                        android:textSize="18sp"
                        android:id="@+id/maildetail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autoLink="email"
                        android:clickable="true"
                        android:padding="@dimen/text_padding"
                        android:textColor="@color/detail"
                        android:fontFamily="@font/lato_regular"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                app:cardBackgroundColor="@color/snow"
                android:layout_margin="@dimen/card_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/text_padding"
                        android:text="@string/web"
                        android:fontFamily="@font/lato_regular"/>

                    <TextView
                        android:textSize="18sp"
                        android:id="@+id/webdetail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/text_padding"
                        android:autoLink="web"
                        android:clickable="true"
                        android:textColor="@color/detail"
                        android:fontFamily="@font/lato_regular"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/text_padding"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

</androidx.cardview.widget.CardView>